--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/dhanush/django-env/bin/activate.csh"
+    "python.pythonPath": "/home/dhanush/django-env/bin/python"
 }
