--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,93 @@
-appdirs==1.4.4
+asgiref==3.2.5
+asn1crypto==0.24.0
 astroid==2.4.2
-autopep8==1.5.4
-distlib==0.3.1
-filelock==3.0.12
+attrs==19.1.0
+autobahn==19.8.1
+Automat==0.7.0
+autopep8==1.4.4
+beautifulsoup4==4.8.2
+bs4==0.0.1
+certifi==2019.11.28
+cffi==1.12.3
+chardet==3.0.4
+colorama==0.4.1
+constantly==15.1.0
+cryptography==2.7
+defusedxml==0.6.0
+dj-database-url==0.5.0
+Django==3.0.7
+django-allauth==0.42.0
+django-cors-headers==3.4.0
+django-countries==5.5
+django-crispy-forms==1.7.2
+django-filter==2.4.0
+django-heroku==0.3.1
+django-rest-auth==0.9.5
+django-templated-mail==1.1.1
+django-tinymce==3.0.2
+django-tinymce4-lite==1.7.5
+django-widget-tweaks==1.4.8
+djangorestframework==3.11.0
+djoser==2.0.3
 flake8==3.8.4
-importlib-metadata==2.0.0
-importlib-resources==3.0.0
-isort==5.7.0
+gunicorn==20.0.4
+httpie==2.2.0
+hyperlink==19.0.0
+idna==2.9
+importlib-metadata==3.3.0
+incremental==17.5.0
+install==1.3.1
+instamojo-wrapper==1.2.0
+isort==4.3.21
 jedi==0.17.2
+jsmin==2.2.2
 lazy-object-proxy==1.4.3
+lxml==4.5.0
+Markdown==3.3.3
 mccabe==0.6.1
+oauthlib==3.1.0
 parso==0.7.1
+pep8==1.7.1
+Pillow==7.2.0
 pluggy==0.13.1
+psycopg2==2.7.7
+psycopg2-binary==2.8.6
+public==2019.4.13
 pycodestyle==2.6.0
+pycparser==2.19
 pydocstyle==5.1.1
 pyflakes==2.2.0
+Pygments==2.6.1
+PyHamcrest==1.9.0
 pylint==2.6.0
+pylint-django==2.0.15
+pylint-plugin-utils==0.6
+pyls==0.1.6
 python-jsonrpc-server==0.4.0
 python-language-server==0.36.2
+python-magic==0.4.18
+python3-openid==3.1.0
+pytz==2019.3
+query-string==2019.4.13
+razorpay==1.2.0
+requests==2.23.0
+requests-oauthlib==1.3.0
 rope==0.18.0
-six==1.15.0
+six==1.14.0
 snowballstemmer==2.0.0
-toml==0.10.2
-typed-ast==1.4.2
+soupsieve==2.0
+sqlparse==0.3.1
+stripe==2.37.1
+toml==0.10.1
+txaio==18.8.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
 ujson==4.0.1
-virtualenv==20.0.33
-wrapt==1.12.1
+urllib3==1.25.8
+virtualenv==16.6.1
+virtualenvwrapper-win==1.2.5
+whitenoise==5.2.0
+wrapt==1.11.2
 yapf==0.30.0
-zipp==3.3.0
+zipp==3.4.0
+zope.interface==4.6.0
